2002-08-14  Sam Steingold  <sds@gnu.org>

	* makemake.in (makemake): no need for a separate second
	config.status invocation to get the additional commands
	* configure.in (po/Makefile.in): use AC_CONFIG_FILES, not AC_OUTPUT
	(makemake): use AC_CONFIG_FILES, not AC_CONFIG_COMMANDS

2002-08-12  Sam Steingold  <sds@gnu.org>

	* makemake.in (encflags): new variable: -Efile and -Eterminal
	instead of the general -E (see patch 2002-06-10): need to keep
	*MISC-ENCODING* set to the user localization
	Reported by Arseny Slobodjuck.

2002-08-11  Sam Steingold  <sds@gnu.org>

	fixed the EXEEXT inconsistencies
	* _clisp.c (main): execname may be lisp.exe
	* clisp-link (LISPRUN): new variable, used throughout
	* makemake.in (clisp-link): replace EXEEXT
	use ${LEXE} more consistently

2002-08-10  Arseny Slobodjuck <ampy@ich.dvo.ru>

	* makemake.in [win32]: do not use apostrophes as shell screening
	characters on win32.

2002-08-10  Arseny Slobodjuck <ampy@ich.dvo.ru>

	* makemake.in: lisp executable depends on libcharset.

2002-08-09  Sam Steingold  <sds@gnu.org>

	fixed makemake creation: additional commands were not executed
	* configure.in (makemake): AC_OUTPUT with arguments is
	deprecated, use AC_CONFIG_COMMANDS instead
	* makemake.in (makemake): separate config.status invocation for
	variable substitution and the additional commands in configure.in

2002-08-09  Sam Steingold  <sds@gnu.org>

	* _clisp.c (main): accept `-d' (now that .clisp is gone, the
	developers are expected to use the driver)

2002-08-09  Sam Steingold  <sds@gnu.org>

	* makemake.in (TEXE, LEXE) [cygwin32]: exe/exe, because some
	win32 programs (e.g. Emacs) cannot start lisp.run (cygwin bash has
	no problems, of course)

2002-08-09  Sam Steingold  <sds@gnu.org>

	added Gabriel's benchmarks
	* makemake.in (bench): new target

2002-08-09  Sam Steingold  <sds@gnu.org>

	avoid compiler warning in (defun z () #'(lambda () (z)))
	* compiler.lisp (defining-p): new function
	(in-defun-p): use it